# stays-platform/spec/swagger.json
@@ -1424,6 +1424,43 @@
 				]
 			}
 		},
+		"/orgs/{orgId}/stays": {
+			"get": {
+				"operationId": "GetOrgsStays",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/StayRecord"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"security": [
+					{
+						"user": [
+							"Host"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "orgId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
 		"/orgs/{orgId}/stays/{stayId}": {
 			"put": {
 				"operationId": "AddStayToOrg",
